--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "nuxt-icon": "^0.5.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5"
+  },
+  "dependencies": {
+    "swiper": "^10.3.1"
   }
 }
